--- a/config/config_adv.json
+++ b/config/config_adv.json
@@ -1,7 +1,6 @@
 {
   "top_p": 0.6,
-  "temperature": 1.5,
-  "presence": 0.5,
-  "frequency": 0.5,
-  "max_token": 2048
+  "temperature": 1.8,
+  "presence": 1,
+  "frequency": 1
 }
