--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,7 +1,7 @@
 {
   "top_p": 0.6,
-  "top_k": 0,
-  "temperature": 1.8,
-  "presence": 0.2,
-  "frequency": 0.2
+  "tau": 0.2,
+  "temperature": 0.4,
+  "presence": 0.3,
+  "frequency": 0.3
 }
