把top_k这个参数给加了回去。

--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,6 +1,7 @@
 {
   "top_p": 0.75,
+  "top_k": 25,
   "temperature": 2.5,
-  "presence": 0.2,
-  "frequency": 0.2
+  "presence": 0,
+  "frequency": 1
 }
