--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,7 +1,8 @@
 {
-  "top_p": 0.75,
-  "top_k": 25,
-  "temperature": 2.5,
+  "top_p": 0.6,
+  "top_k": 0,
+  "temperature": 1.5,
   "presence": 0,
-  "frequency": 1
+  "frequency": 1,
+  "cfg": 1
 }
