--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,8 +1,10 @@
 {
-  "top_p": 0.6,
-  "top_k": 0,
+  "min_len": 0,
+  "top_p": 0.5,
+  "tau": 0,
   "temperature": 1.5,
-  "presence": 0,
-  "frequency": 1,
-  "cfg": 1
+  "presence": 0.2,
+  "frequency": 0.2,
+  "cfg": 0,
+  "force_action": false
 }
