知道top_k怎么用了之后，又把它给加回来了。

--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,8 +1,8 @@
 {
-  "top_p": 0.6,
-  "tau": 0,
-  "temperature": 1.5,
-  "presence": 0.3,
-  "frequency": 0.3,
+  "top_p": 0.7,
+  "top_k": 20,
+  "temperature": 2.5,
+  "presence": 0.2,
+  "frequency": 0.2,
   "force_action": false
 }
