--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,7 +1,6 @@
 {
   "top_p": 0.6,
   "top_k": 0,
-  "temperature": 1.5,
-  "presence": 0.2,
-  "frequency": 0.2
+  "temperature": 2,
+  "presence": 0.2
 }
