--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,6 +1,8 @@
 {
-  "top_p": 0.6,
+  "top_p": 0.65,
   "top_k": 0,
-  "temperature": 2,
-  "presence": 0.2
+  "temperature": 2.5,
+  "presence": 0.2,
+  "frequency": 0.2,
+  "context": 3
 }
