--- a/config/config_role.json
+++ b/config/config_role.json
@@ -1,10 +1,8 @@
 {
-  "tau": 3,
-  "lr": 0.3,
+  "tau": 5,
+  "lr": 0.1,
   "lr_decay": 0.01,
-  "min_p": 0.05,
-  "min_temp": 1,
-  "max_temp": 2,
-  "dynatemp_exponent": 1,
+  "top_p": 0.6,
+  "temp": 2,
   "presence": 0.1
 }
